# EatingSnake

./: CMakeLists.txt  basic.c  basic.h  food.c  food.h  main.c  main.h  my_time.c  my_time.h  schedule.c  schedule.h  snake.c  snake.h
